--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -30,12 +30,9 @@
                                 {{> 'dashboard/components/card_section' section-id="activeCourses" title="" content=activeCourses link-text="Öffnen" additionalInfoName="memberCount"}}
                             {{else}}
                                 <div class="empty-state">
-                                    <img src="/images/empty-states/books.svg" alt="Keine hinzufügten Kurse" class="image"/>
-                                    {{#userHasPermission "COURSE_CREATE" }}
-                                        <h2 class="h4">Erstelle, duplizieren oder importiere einen Kurs</h2>
-                                        <p class="text-muted">
-                                        Kurse, deren Enddatum erreicht ist, findest du  <a href="?activeTab=archived">im Archive</a>. Du kannst archivierte Kurse duplizieren und als Vorlage für das neue Schuljahr verwenden, einen Kurs importieren oder einen ganz neuen Kurs erstellen.
-                                        </p>
+                                    <img src="/images/empty-states/books.svg" alt="Keine Kurse vorhanden" class="image"/>
+                                    {{#userHasPermission "COURSE_EDIT"}}
+                                        <h2 class="h4">Erstelle, dupliziere oder importiere einen Kurs</h2>
                                     {{else}}
                                         <h2 class="h4 text-muted">Es gibt aktuell keine Kurse</h2>
                                     {{/userHasPermission}}
@@ -44,7 +41,7 @@
                                 <div class="col-xs-12">
                                     <p class="text-muted">
                                         <i class="fa fa-frown-o"></i>
-                                        <span>Kurse, deren Enddatum erreicht ist, findest du  <a href="?activeTab=archived">im Archiv</a>. Du kannst archivierte Kurse duplizieren und als Vorlage für das neue Schuljahr verwenden, einen Kurs importieren oder einen ganz neuen Kurs erstellen.</span>
+                                        <span>Kurse, deren Enddatum erreicht ist, findest du <a href="?activeTab=archived">im Archiv</a>. Du kannst archivierte Kurse duplizieren und als Vorlage für das neue Schuljahr verwenden, einen Kurs importieren oder einen ganz neuen Kurs erstellen.</span>
                                     </p>
                                 </div>
                             {{/if}}
@@ -80,7 +77,7 @@
 
                                     <h2 class="h4">Du hast noch keine archivierten Kurse</h2>
                                     <p class="text-muted">
-                                      Kurse, deren Enddatum erreicht ist, findest du im Archiv. Du kannst archivierte Kurse duplizieren und als Vorlage für das neue Schuljahr verwenden, einen Kurs importieren oder einen ganz neuen Kurs erstellen.
+                                      Kurse, deren Enddatum erreicht ist, findest du hier. Du kannst archivierte Kurse als Vorlage für das neue Schuljahr wiederverwenden, einen Kurs importieren oder einen ganz neuen Kurs erstellen.
                                     </p>
 
                                 </div>
