--- a/views/administration/ldap-schoolyear-start.hbs
+++ b/views/administration/ldap-schoolyear-start.hbs
@@ -2,7 +2,7 @@
     {{#content "page" mode="prepend"}}
         <h1 class="h4" id="page-title">Überprüfe die Synchronisation der im LDAP vorliegenden Daten für das neue Schuljahr</h1>
         <div class="route-administration">
-            <p>Auf dieser Seite findest du die Daten aller Klassen und Nutzer, so wie sie die Cloud aus deinem LDAP übernehmen wird. Bitte überprüfe vor Übernahme der Daten durch Beenden der Transferphase diese Daten stichprobenartig auf ihre Richtigkeit.</p>
+            <p>Auf dieser Seite findest du die Daten aller Klassen und Nutzer, so wie sie die {{@root.theme.short_title}} aus deinem LDAP übernehmen wird. Bitte überprüfe vor Übernahme der Daten durch Beenden der Transferphase diese Daten stichprobenartig auf ihre Richtigkeit.</p>
             <section class="section-school section-default">
                 <div class="container-fluid ajaxcontent">
                     <h5>LDAP-Klassen</h5>
