--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -54,30 +54,44 @@
                     </div>
                 {{/unless}}
 
-                <button class="btn btn-sm btn-secondary pull-right" id="edit-consent" type="button">bearbeiten <i class="fa fa-edit"></i></button>
+                {{#unless hasImportHash}}<button class="btn btn-sm btn-secondary pull-right" id="edit-consent" type="button">Bearbeiten <i class="fa fa-edit"></i></button>{{/unless}}
                 <h2 class="h5">Einwilligungen: {{{consentStatusIcon}}}</h2>
                 <div class="row" id="consents-overview">
                     {{#unless editTeacher}}
-                        <div class="col-md-6">
-                            <b>Eltern</b><br/>
-                            <input name="parent_consentId" type="hidden" value="{{consent.parentConsent._id}}" disabled/>
+                        {{#unless hasImportHash}}
+                            <div class="col-md-6">
+                                <b>Eltern</b><br/>
+                                <input name="parent_consentId" type="hidden" value="{{consent.parentConsent._id}}" disabled/>
 
-                            <label><input name="parent_form" value="analog" type="radio" disabled {{#ifeq consent.parentConsent.form 'analog'}}checked{{/ifeq}}/> Analog</label>
-                            <label><input name="parent_form" value="digital" type="radio" disabled {{#ifeq consent.parentConsent.form 'digital'}}checked{{/ifeq}}/> Digital</label>
-                            <br/>
-                            <label><input name="parent_privacyConsent" type="checkbox" value="true" disabled {{#if consent.parentConsent.privacyConsent}}checked{{/if}}/> Datenschutz</label><br/>
-                            <label><input name="parent_termsOfUseConsent" type="checkbox" value="true" disabled {{#if consent.parentConsent.termsOfUseConsent}}checked{{/if}}/> Nutzung</label><br/>
-                        </div>
-                        <div class="col-md-6">
-                            <b>Schüler</b><br/>
-                            <input name="student_consentId" type="hidden" value="{{consent._id}}" disabled/>
+                                <label><input name="parent_form" value="analog" type="radio" disabled {{#ifeq consent.parentConsent.form 'analog'}}checked{{/ifeq}}/> Analog</label>
+                                <label><input name="parent_form" value="digital" type="radio" disabled {{#ifeq consent.parentConsent.form 'digital'}}checked{{/ifeq}}/> Digital</label>
+                                <br/>
+                                <label><input name="parent_privacyConsent" type="checkbox" value="true" disabled {{#if consent.parentConsent.privacyConsent}}checked{{/if}}/> Datenschutz</label><br/>
+                                <label><input name="parent_termsOfUseConsent" type="checkbox" value="true" disabled {{#if consent.parentConsent.termsOfUseConsent}}checked{{/if}}/> Nutzung</label><br/>
+                            </div>
+                            <div class="col-md-6">
+                                <b>Schüler</b><br/>
+                                <input name="student_consentId" type="hidden" value="{{consent._id}}" disabled/>
 
-                            <label><input name="student_form" value="analog" type="radio" disabled {{#ifeq consent.userConsent.form 'analog'}}checked{{/ifeq}}/> Analog</label>
-                            <label><input name="student_form" value="digital" type="radio" disabled {{#ifeq consent.userConsent.form 'digital'}}checked{{/ifeq}}/> Digital</label>
-                            <br/>
-                            <label><input name="student_privacyConsent" type="checkbox" value="true" disabled {{#if consent.userConsent.privacyConsent}}checked{{/if}}/> Datenschutz</label><br/>
-                            <label><input name="student_termsOfUseConsent" type="checkbox" value="true" disabled {{#if consent.userConsent.termsOfUseConsent}}checked{{/if}}/> Nutzung</label><br/>
-                        </div>
+                                <label><input name="student_form" value="analog" type="radio" disabled {{#ifeq consent.userConsent.form 'analog'}}checked{{/ifeq}}/> Analog</label>
+                                <label><input name="student_form" value="digital" type="radio" disabled {{#ifeq consent.userConsent.form 'digital'}}checked{{/ifeq}}/> Digital</label>
+                                <br/>
+                                <label><input name="student_privacyConsent" type="checkbox" value="true" disabled {{#if consent.userConsent.privacyConsent}}checked{{/if}}/> Datenschutz</label><br/>
+                                <label><input name="student_termsOfUseConsent" type="checkbox" value="true" disabled {{#if consent.userConsent.termsOfUseConsent}}checked{{/if}}/> Nutzung</label><br/>
+                            </div>
+                        {{else}}
+                            <div class="col-md-6">
+                                <p>
+                                    Wenn die Einverständniserklärung von dem Schüler und Eltern in Papierform erfolgt ist, kann hier das Einverständnis für den Schüler manuell erklärt werden.
+                                </p>
+                                <p>
+                                    <a class="btn btn-secondary" href="/administration/students/{{user._id}}/skipregistration">
+                                        <i class="fa fa-check-square-o"></i>
+                                        Einverständnis erklären
+                                    </a>
+                                </p>
+                            </div>
+                        {{/unless}}
                     {{else}}
                         <div class="col-md-6">
                             <input name="consentId" type="hidden" value="{{consent._id}}" disabled/>
