--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -82,12 +82,12 @@
                         {{else}}
                             <div class="col-md-6">
                                 <p>
-                                    Wenn die Einverständniserklärung von dem Schüler und Eltern in Papierform erfolgt ist, kann hier das Einverständnis für den Schüler manuell erklärt werden.
+                                    Es liegt noch keine Einverständniserklärung für den Nutzer vor. Rufe einen persönlichen Einladungslink zum Abschluss der Registrierung und verteile ihn an den Nutzer oder seine Eltern. Während der Registrierung wird dann die Einverständniserklärung durch den Nutzer selbst erteilt. Wenn eine Einverständniserklärung in Papierform vorliegt, kann der Nutzer per Klick auf "Einverständnis auf Papier erhalten" aktiviert und ein Startpasswort vergeben werden. Damit ist der Login dann freigeschaltet.
                                 </p>
                                 <p>
                                     <a class="btn btn-secondary" href="/administration/students/{{user._id}}/skipregistration">
                                         <i class="fa fa-check-square-o"></i>
-                                        Einverständnis erklären
+                                        Einverständnis auf Papier erhalten
                                     </a>
                                 </p>
                             </div>
