Fix wording and icon colors

--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -118,13 +118,15 @@
                                 <div class="col-xs-4 text-center">
                                     <div class="d-flex justify-content-center">
                                         <p class="font-weight-bold">Beachte verfügbare Funktionen <br> in der Transferphase:</p>
-                                        <p><i class="fa fa-times red"></i> Klassen anlegen oder ändern</p>
-                                        <p><i class="fa fa-times red"></i> Nutzer anlegen oder ändern</p>
-                                        <p><i class="fa fa-check green"></i> Login über LDAP</p>
-                                        <p><i class="fa fa-check green"></i> Kennwortänderungen</p>
+                                        <p><i class="fa fa-check"></i> Logins bestehender Nutzer</p>
+                                        <p><i class="fa fa-check"></i> Kennwortänderungen im LDAP</p>
+                                        <p><i class="fa fa-times"></i> Änderung von Klassen/neue Klassen</p>
+                                        <p><i class="fa fa-times"></i> Änderung von Nutzerdaten/neue Nutzer</p>
                                     </div>
                                 </div>
                                 <div class="col-xs-4 text-center">
+                                    <p class="font-weight-bold">Nach Beendung der Transferphase kann deine Schule ins neue Schuljahr starten.</p>
+                                    <p><i class="fa fa-check"></i> Alles erledigt!</p>
                                 </div>
                             </div>
                             <form action="/administration/startschoolyear" type="post">
