--- a/static/styles/administration/school.scss
+++ b/static/styles/administration/school.scss
@@ -41,24 +41,10 @@ label {
     padding-left: 12px;
     padding-right: 12px;
   }
-  .btn-delete-course {
-    margin-right: 10px;
+  i.fa-check {
+    color: green;
   }
-  .final-step {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
-    .image-wrapper {
-      padding: 30px;
-      opacity: 0.8;
-    }
-    .image {
-      width: 250px;
-    }
-    .course-features {
-      margin-top: 15px;
-    }
+  i.fa-times {
+    color: red;
   }
 }
