Restore green/red class

--- a/static/styles/administration/school.scss
+++ b/static/styles/administration/school.scss
@@ -41,10 +41,10 @@ label {
     padding-left: 12px;
     padding-right: 12px;
   }
-  i.fa-check {
+  i.fa-check.green {
     color: green;
   }
-  i.fa-times {
+  i.fa-times.red {
     color: red;
   }
 }
