--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -126,7 +126,7 @@
                                 </div>
                                 <div class="col-xs-4 text-center">
                                     <p class="font-weight-bold">Nach Beendung der Transferphase kann deine Schule ins neue Schuljahr starten.</p>
-                                    <p><i class="fa fa-check green"></i> Alles erledigt!</p>
+                                    <p><i class="fa fa-smile-o"></i> Alles erledigt!</p>
                                 </div>
                             </div>
                             <form action="/administration/startschoolyear" type="post">
