--- a/static/styles/administration/progress-static.scss
+++ b/static/styles/administration/progress-static.scss
@@ -32,15 +32,11 @@
 }
 
 .stages label.current {
-  display: inline-block;
-  box-sizing: content-box;
   border-color: $primaryColor;
 }
 
 .stages label.done {
-    color: #4caf50;
-    display: inline-block;
-    box-sizing: content-box;
+    color: $colorSuccess;
   }
 
 /* for initial state */
