add search to schools list

--- a/static/styles/homepage/login.scss
+++ b/static/styles/homepage/login.scss
@@ -12,7 +12,7 @@
 		white-space: normal;
 		min-width: 22ch;
     }
-    input {
+    input:not(.chosen-search-input) {
         margin-bottom: 10px;
         font-size: 1rem;
         padding: .5rem;
