--- a/views/authentication/forms/login.hbs
+++ b/views/authentication/forms/login.hbs
@@ -20,7 +20,7 @@
 
                 <div class="login-providers">
                     <div class="form-group ">
-                        <select name="schoolId" class="school" data-placeholder="Schule">
+                        <select name="schoolId" class="school search-enabled" data-placeholder="Schule">
                             {{#each schools}}
                                 <option value="{{this._id}}">{{this.name}}</option>
 							{{else}}
