remove default date from registration and firstlogin

--- a/views/firstLogin/sections/birthdate_U14.hbs
+++ b/views/firstLogin/sections/birthdate_U14.hbs
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="form-group col-md-6 col-sm-12">
       <label>Geburtsdatum: *</label>
-      <input class="form-control linked" data-date data-min-date="{{datePickerTodayMinus 14 0 -1}}" data-max-date="{{datePickerTodayMinus 4 0 0}}" value="{{datePickerTodayMinus 10 0 0 "DD.MM.YYYY"}}" name="studentBirthdate" type="text" required autocomplete="off" />
+      <input class="form-control linked" data-date data-min-date="{{datePickerTodayMinus 14 0 -1}}" data-max-date="{{datePickerTodayMinus 4 0 0}}" name="studentBirthdate" type="text" required autocomplete="off" />
     </div>
   </div>
 </section>
