--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -38,7 +38,7 @@
             <label>Geburtsdatum: <sup>*</sup></label>
             <input class="form-control linked" name="birthDate" type="text"
                 data-date data-min-date="{{datePickerTodayMinus 100 0 0}}" data-max-date="{{datePickerTodayMinus 16 0 0}}"
-                value="{{#if user.birthday}}{{dateToPicker user.birthday}}{{else}}{{datePickerTodayMinus 17 0 0 "DD.MM.YYYY"}}{{/if}}"
+                value="{{#if user.birthday}}{{dateToPicker user.birthday}}{{/if}}"
                 required {{#if user.birthday}}readonly{{/if}} autocomplete="off" />
 
         </div>
