--- a/views/addons/addons.hbs
+++ b/views/addons/addons.hbs
@@ -5,8 +5,8 @@
     {{#content "page"}}
       <div class="card card-block card-tool" onclick="location.href='#'">
         <h2 class="h5">Portfolio</h2>
-        <img src="/images/cloud.png" class="float-left" style="width:auto; height:75px;" />
-        <span>Beschreibung</span>
+        <img src="/images/cloud.png" class="card-img" style="width:auto; height:75px;" />
+        <span>Erzeuge dein digitales Portfolio in einem flexiblen persönlichen Lernsystem. Teile die Erfolge und deine Entwicklung an einem Ort, den du selbst gestaltest. Arbeite mit anderen in Gruppen zusammen.</span>
       </div>
     {{/content}}
 {{/extend}}
