--- a/views/courses/edit-courseGroup.hbs
+++ b/views/courses/edit-courseGroup.hbs
@@ -25,8 +25,7 @@
 
                 <div class="form-group">
                     <label>Name der Gruppe</label>
-                    <input class="form-control" name="name" type="text" placeholder="Gruppe 1" value="{{{courseGroup.name}}}"
-                           required/>
+                    <input class="form-control" name="name" type="text" placeholder="Gruppe 1" value="{{{courseGroup.name}}}" required/>
                 </div>
 
                 <div class="form-group">
