formula is not rendered if display none is set
SC-1337

--- a/static/styles/homework/submissions.scss
+++ b/static/styles/homework/submissions.scss
@@ -71,8 +71,13 @@
       display: table-row;
       cursor: initial;
     }
+    &:not(.active)
     .evaluation {
-      display: none;
+      position: absolute;
+      left: -100vmax;
+    }
+
+    .evaluation {
       background: transparent;
     }
   }
