--- a/views/addons/addons.hbs
+++ b/views/addons/addons.hbs
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="/styles/addons/addons.css"/>
     {{/content}}
     {{#content "page"}}
-      <div class="card card-block card-tool" onclick="location.href='#'">
+      <div class="card card-block card-tool" onclick="location.href='/tools/show/portfolio'">
         <h2 class="h5">Portfolio</h2>
         <img src="/images/cloud.png" class="card-img" style="width:auto; height:75px;" />
         <span>Erzeuge dein digitales Portfolio in einem flexiblen persönlichen Lernsystem. Teile die Erfolge und deine Entwicklung an einem Ort, den du selbst gestaltest. Arbeite mit anderen in Gruppen zusammen.</span>
